err/aps-cli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aps_cli-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/apscli'...
Compiling './lib/python3.5/site-packages/apscli/apsCliHelper.py'...
***   File "./lib/python3.5/site-packages/apscli/apsCliHelper.py", line 28
    print self.color.bold+"NAME:"+self.color.end
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/apscli/apsExtensionCliHandler.py'...
***   File "./lib/python3.5/site-packages/apscli/apsExtensionCliHandler.py", line 86
    print "get local_modules_list failed"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/apscli/apsImagesOperator'...
Compiling './lib/python3.5/site-packages/apscli/apsImagesOperator/getDesImages.py'...
***   File "./lib/python3.5/site-packages/apscli/apsImagesOperator/getDesImages.py", line 8
    print "start get target existing images"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/apscli/apsImagesOperator/getMoudleImages.py'...
***   File "./lib/python3.5/site-packages/apscli/apsImagesOperator/getMoudleImages.py", line 8
    print "start get module images"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/apscli/apsModuleOperator'...
Compiling './lib/python3.5/site-packages/apscli/apsModuleOperator/downloadModules.py'...
***   File "./lib/python3.5/site-packages/apscli/apsModuleOperator/downloadModules.py", line 9
    print "perpare to download"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/apscli/apsModuleOperator/getDesModules.py'...
***   File "./lib/python3.5/site-packages/apscli/apsModuleOperator/getDesModules.py", line 19
    print "Something wrong happened when getting target modules!"
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/apscli/apsModuleOperator/getLocalModules.py'...
***   File "./lib/python3.5/site-packages/apscli/apsModuleOperator/getLocalModules.py", line 19
    print "Something wrong happened!"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/apscli/apsModuleOperator/getProjectModules.py'...
***   File "./lib/python3.5/site-packages/apscli/apsModuleOperator/getProjectModules.py", line 19
    print "Something wrong happened!"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/apscli/apsOpenApiData.py'...
***   File "./lib/python3.5/site-packages/apscli/apsOpenApiData.py", line 43
    print "local username can't be NONE"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/apscli/apsProjetcOperator'...
Compiling './lib/python3.5/site-packages/apscli/apsProjetcOperator/getProjects.py'...
***   File "./lib/python3.5/site-packages/apscli/apsProjetcOperator/getProjects.py", line 20
    print "Something wrong happened!"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/apscli/userLogin'...
Compiling './lib/python3.5/site-packages/apscli/userLogin/loginUser.py'...
***   File "./lib/python3.5/site-packages/apscli/userLogin/loginUser.py", line 9
    print "logining user ......"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
